<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  ~  Copyright (c) 2012, Janrain, Inc.
  ~
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without modification,
  ~  are permitted provided that the following conditions are met:
  ~
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~    this list of conditions and the following disclaimer in the documentation and/or
  ~    other materials provided with the distribution.
  ~  * Neither the name of the Janrain, Inc. nor the names of its
  ~    contributors may be used to endorse or promote products derived from this
  ~    software without specific prior written permission.
  ~
  ~
  ~  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~  ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
  ~  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~  ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
  -->


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="20.0sp"
            android:layout_marginTop="5dp"
            android:hint="@string/jr_capture_signin_view_username_hint"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:capitalize="none"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="20.0sp"
            android:layout_marginTop="5dp"
            android:hint="@string/jr_capture_signin_view_password_hint"
            android:password="true"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />

        <TextView
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceInverse"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/custom_signin_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/jr_capture_signin_view_button_title"
                />

            <Button
                android:id="@+id/custom_signin_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"

                android:text="@android:string/cancel"
                />


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/trad_signin_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:visibility="gone"
        android:indeterminate="true"
    />

</FrameLayout>
