<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  ~  Copyright (c) 2011, Janrain, Inc.
  ~
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without modification,
  ~  are permitted provided that the following conditions are met:
  ~
  ~  * Redistributions of source code must retain the above copyright notice, this
  ~    list of conditions and the following disclaimer.
  ~  * Redistributions in binary form must reproduce the above copyright notice,
  ~    this list of conditions and the following disclaimer in the documentation and/or
  ~    other materials provided with the distribution.
  ~  * Neither the name of the Janrain, Inc. nor the names of its
  ~    contributors may be used to endorse or promote products derived from this
  ~    software without specific prior written permission.
  ~
  ~
  ~  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
  ~  ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
  ~  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
  ~  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~  ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  ~  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/jr_tab_social_publish_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="5dp"
    android:visibility="gone"
    >

    <EditText
        android:id="@+id/jr_edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginTop="5dip"
        android:layout_marginRight="4dip"
        android:layout_marginLeft="4dip"
        android:gravity="top|left"

        android:hint="@string/jr_please_enter_text"
        android:textColorHint="@color/jr_text_color_hint"
        android:lines="3"
        android:inputType="textMultiLine|textAutoComplete"
        android:textSize="@dimen/jr_edit_text_size"
        />

    <TextView
        android:id="@+id/jr_character_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/jr_edit_comment"
        android:layout_alignParentRight="true"
        android:layout_marginRight="4dip"
        android:layout_marginLeft="4dip"
        android:layout_marginBottom="5dip"

        android:singleLine="true"
        android:textColor="@color/jr_preview_label"
        android:text="@string/jr_calculating_remaining_characters"
        android:textSize="@dimen/jr_character_count_size"
        />

    <!-- This layout expands to the size between the character count view and
         the provider icon.  It renders nothing, but only server as a bounding
         container for the jr_preview_box.  (We can't allow the preview box to grow
         to this size though, because then it's background does too, and that looks
         weird.) -->
    <!--Cute name, btw...-->
    <FrameLayout
        android:id="@+id/jr_nested_layout_mania_sunday_sunday_sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/jr_character_count_view"
        android:layout_above="@+id/jr_provider_icon"
        >

        <com.janrain.android.engage.ui.AutoBlankingFrameLayout
            android:id="@+id/jr_preview_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/jr_bg_publish_preview"
            >

            <LinearLayout
                android:id="@+id/jr_preview_box_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:padding="@dimen/jr_preview_border_padding"
                android:paddingTop="@dimen/jr_preview_label_padding"

                android:orientation="vertical"
                android:background="@drawable/jr_bg_publish_preview_border"
                >

                <TextView
                    android:id="@+id/jr_preview_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="2dip"
                    android:layout_marginLeft="4dip"
                    android:layout_marginBottom="2dip"
                    android:layout_marginRight="4dip"

                    android:textSize="@dimen/jr_preview_text_size"
                    android:bufferType="spannable"
                    />

                <RelativeLayout
                    android:id="@+id/jr_media_content_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="3dip"
                    android:layout_marginLeft="4dip"
                    android:layout_marginBottom="4dip"
                    android:layout_marginRight="4dip"
                    android:paddingTop="3dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="7dp"

                    android:background="@drawable/jr_bg_provider_activity_info"
                    >

                    <ImageView
                        android:id="@+id/jr_media_content_image"
                        android:layout_width="@dimen/jr_media_icon_size"
                        android:layout_height="@dimen/jr_media_icon_size"

                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="5dip"

                        android:scaleType="centerCrop"
                        android:src="@drawable/jr_media60x60"
                        />

                    <TextView
                        android:id="@+id/jr_media_content_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginRight="5dip"
                        android:layout_marginLeft="5dip"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@id/jr_media_content_image"

                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textStyle="bold"
                        android:textColor="@color/jr_janrain_darkblue"
                        android:textSize="@dimen/jr_media_content_title_size"
                        />

                    <TextView
                        android:id="@+id/jr_media_content_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginRight="5dip"
                        android:layout_marginLeft="5dip"
                        android:layout_below="@id/jr_media_content_title"
                        android:layout_toRightOf="@id/jr_media_content_image"

                        android:textStyle="normal"
                        android:maxLines="4"
                        android:textSize="@dimen/jr_media_content_description_size"
                        />

                </RelativeLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="@dimen/jr_preview_label_paddingLeft"
                >

                <TextView
                    android:id="@+id/jr_preview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"

                    android:text="@string/jr_preview"
                    android:textColor="@color/jr_preview_label"
                    android:textSize="@dimen/jr_preview_label_size"
                    />

            </FrameLayout>

        </com.janrain.android.engage.ui.AutoBlankingFrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/jr_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="4dip"
        android:paddingRight="6dip"
        android:layout_above="@+id/jr_user_profile_information_and_share_button_container"
        android:layout_alignParentLeft="true"

        android:singleLine="true"
        android:text="@string/jr_powered_by"
        android:textColor="@color/jr_medium_grey"
        android:textSize="@dimen/jr_tagline_size"
        />


    <ImageView
        android:id="@+id/jr_provider_icon"
        android:layout_width="@dimen/jr_provider_icon_size"
        android:layout_height="@dimen/jr_provider_icon_size"

        android:layout_gravity="right|bottom"
        android:layout_marginBottom="4dip"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/jr_user_profile_information_and_share_button_container"
        />

    <LinearLayout
        android:id="@+id/jr_user_profile_information_and_share_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:gravity="top|center_horizontal"

        android:orientation="vertical"
        android:background="@color/jr_janrain_darkblue_lightened"
        >

        <FrameLayout
            android:id="@+id/jr_profile_pic_and_buttons_horizontal_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            android:gravity="center"
            android:paddingRight="10dip"
            android:paddingLeft="10dip"
            >

            <LinearLayout
                android:id="@+id/jr_user_profile_container"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"

                android:visibility="invisible"
                android:layout_weight="1"

                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/jr_profile_pic"
                    android:layout_width="@dimen/jr_profile_pic_size"
                    android:layout_height="@dimen/jr_profile_pic_size"

                    android:layout_gravity="center_vertical"

                    android:src="@drawable/jr_profilepic_placeholder"
                    android:scaleType="centerCrop"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"

                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:id="@+id/jr_name_and_sign_out_container"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"

                        android:paddingTop="0dip"
                        android:paddingRight="5dip"
                        android:paddingBottom="0dip"
                        android:paddingLeft="10dip"

                        android:orientation="vertical"
                        >

                        <ImageView
                            android:id="@+id/jr_triangle_icon_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_gravity="center_horizontal"

                            android:src="@drawable/jr_triangle_icon"
                            />
                        <!--android:src="?jrPublishTriangleResource"-->
                        <!--android:visibility="?jrPublishTriangleVisibility"-->

                        <TextView
                            android:id="@+id/jr_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:gravity="top|left"
                            android:paddingBottom="3dp"
                            android:layout_weight="5"

                            android:singleLine="true"
                            android:textSize="@dimen/jr_username_text_size"
                            />

                        <TextView
                            android:id="@+id/jr_sign_out_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:gravity="center_vertical|left"
                            android:layout_weight="4"
                            android:paddingBottom="10dip"

                            android:text="@string/jr_sign_out_button"
                            android:textSize="@dimen/jr_signout_button_text_size"
                            android:layout_marginRight="30dip"
                            />

                    </LinearLayout>

                </LinearLayout>

                <com.janrain.android.engage.ui.ColorButton
                    android:id="@+id/jr_just_share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:text="@string/jr_share_button_text"
                    android:textSize="@dimen/jr_share_button_size"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    />

                <LinearLayout
                    android:id="@+id/jr_shared_text_and_check_mark_horizontal_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"

                    android:gravity="right|center_vertical"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1"

                    android:visibility="gone"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/jr_shared"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:paddingRight="10dip"

                        android:singleLine="true"
                        android:text="@string/jr_shared"
                        android:textSize="@dimen/jr_shared_text_size"
                        android:textStyle="bold"
                        />

                    <ImageView
                        android:id="@+id/jr_check_mark"
                        android:layout_width="20dip"
                        android:layout_height="20dip"

                        android:src="@drawable/jr_check_mark"
                        />

                </LinearLayout>

            </LinearLayout>

            <com.janrain.android.engage.ui.ColorButton
                android:id="@+id/jr_connect_and_share_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"

                android:text="@string/jr_connect_share_button_text"
                android:textSize="@dimen/jr_share_button_size"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
